<resources>
    <string name="app_name">Global Food</string>
    <string name="email">Email</string>
    <string name="email_invalido">No es un formato válido de email</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena_error">La contraseña debe tener almenos 8 cáracteres</string>
    <string name="update_text">Update Text</string>
    <string name="emtpy" />
    <string name="login">Login</string>
    <string name="login_correcto">Logeado correctamente</string>
    <string name="register_correcto">Te has registrado con éxito</string>
    <string name="register">No tienes cuenta? Registrate aquí!</string>
    <string name="confirmacion_contrase_a">Confirmacion Contraseña</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="el_logo">El Logo</string>
    <string name="confirma_contra_incorrecta">Las contraseñas introducidas no coinciden</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ha_olvidado_la_contrasena">Ha olvidado la contraseña?</string>
    <string name="have_account">Ya tienes cuenta? Logeate aquí!</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="mis_recetas">Mis Recetas</string>
    <string name="recetas_fav">Recetas Fav</string>
    <string name="buscar">Search</string>
    <string name="restaurantes_fav">Restaurantes Fav</string>
    <string name="favrecipes">FavRecipes</string>
    <string name="favrestaurantes">FavRestaurants</string>
    <string name="myrecipes">MyRecipes</string>
    <string name="review">review</string>
    <string name="Register">Register</string>
    <string name="registrarse">Registrarse</string>
    <string name="tengoCuenta">TengoCuenta</string>
    <string name="volver">Volver</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="anadir_a_favs">Añadir a Favs</string>
    <string name="titulo_receta">Titulo Receta</string>
    <string name="ver_restau">Ver restau</string>
    <string name="titulo_restaurante">Titulo restaurante</string>
    <string name="ver_receta">Ver receta</string>
    <string name="read_review">Read Review</string>
    <string name="list_review">List Review</string>
    <string name="ListaMyRecipes">ListaMyRecipes</string>
    <string name="usuario_existente">Este nombre de usuario ya existe</string>
    <string name="ver_review">Ver Review</string>
    <string name="read_review_text">readReviewText</string>
    <string name="write_review">Escribir review</string>
    <string name="reviews_list">ListaReviews</string>
    <string name="return_screen">Volver</string>
    <string name="num_favs">NumFavs</string>
    <string name="name_autor">Nombre Autor</string>
    <string name="text_review">Texto Review</string>
    <string name="plato_res">PlatoRes</string>
    <string name="anadirfav">AñadirFav</string>
    <string name="nombre_autor">nombreAutor</string>
    <string name="idreview">idReview</string>
    <string name="recipe_description">Descripcion Receta</string>
    <string name="restaurant_description">Descripcion del Restaurante</string>
    <string name="pais">Pais</string>
    <string name="lista_fav_recipes">ListaFavRecipes</string>
    <string name="ListaFavRestaurants">ListaFavRestaurants</string>
    <string name="ListaFavRecipes">ListaFavRecipes</string>
    <string name="subir_receta">Subir</string>
    <string name="descripreceta">descripReceta</string>
    <string name="paisreceta">paisReceta</string>
    <string name="nombrereceta">nombreReceta</string>
    <string name="descrip_breve">Indica brevemente si te ha gustado o no</string>
    <string name="anadir_afavs">Añadir a favs</string>
    <string name="empty_recipe">Algunos de los campos están vacíos, no se ha podido subir la receta por ese motivo</string>
    <string name="succes_recipe_upload">Se ha subido tu receta correctamente</string>
    <string name="add_to_favs">Añadir a favs</string>
    <string name="delete_from_favs">Eliminar de favs</string>
    <string name="error_no_name_review">Introduce tu nombre para subir tu review</string>
    <string name="error_no_descripbr_review">Introduce una descripcíon breve para subir tu review</string>
    <string name="error_no_review">Este campo no puede estar vacío, introduce tu opinión</string>
    <string name="success_review_upload">Se ha subido tu review correctamente</string>
    <string name="error_user_already_exists">Este usuario ya existe, introduce otro email</string>
    <string name="error_mail_pass_notvalid">El email o contraseña introducidos no son válidos</string>
    <string-array name="pruebaLista">
        <item>Uno</item>
        <item>Dos</item>
        <item>Tres</item>
    </string-array>
</resources>