<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/el_logo"
        android:src="@drawable/logo_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/misRecetas"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mis_recetas"
        app:layout_constraintBottom_toTopOf="@+id/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.656" />

    <Button
        android:id="@+id/recetasFav"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/recetas_fav"
        app:layout_constraintBottom_toTopOf="@+id/restaurantesFav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/misRecetas"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.656" />

    <Button
        android:id="@+id/buscar"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="52dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/restaurantesFav"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:text="@string/restaurantes_fav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buscar" />

</android.support.constraint.ConstraintLayout>