<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddNewRecipe">

    <EditText
        android:id="@+id/nombreReceta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/nombrereceta"
        android:background="@drawable/textbar"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/paisReceta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/paisreceta"
        android:inputType="textPersonName"
        android:background="@drawable/textbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreReceta" />

    <EditText
        android:id="@+id/descripReceta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/textbar"
        android:ems="10"
        android:hint="@string/descripreceta"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="8"
        android:maxLines="8"
        android:singleLine="false"
        android:gravity="top|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paisReceta" />

    <Button
        android:id="@+id/volverAddRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="88dp"
        android:text="@string/volver"
        android:background="@drawable/buttonborder"
        android:textColor="#f6cd14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subirAddRec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripReceta" />

    <Button
        android:id="@+id/subirAddRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="96dp"
        android:text="@string/subir_receta"
        android:background="@drawable/buttonborder"
        android:textColor="#f6cd14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripReceta" />

</android.support.constraint.ConstraintLayout>